[project]
name = "wator"
version = "0.1"
dependencies = ["pyglet"]

[project.optional-dependencies]
dev = ["Cython"]

[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project.scripts]
wator_c = "wator:main.main"

[project.gui-scripts]
wator = "wator:main.main"
